# CWP-Mockup

./: README.md
.github/workflows/: build-package-deb.yml  main.yml
Software/: .gitignore  AUTHORS  CWPMockUp.1  Makefile.am  build.sh  common.h  configure.ac
Software/scripts/: makedeb.sh
Software/src/: Makefile.am  client.h  main.cpp  server.cpp  server.h
Software/web/: Makefile.am
Software/web/htdocs/: client.html  index.html
Software/web/htdocs/js/: airspace.js  client.js  clock.js
src/: .build-tools.cson  .gitignore  Makefile.am  README  build.sh  client.cpp  client.h  common.cpp  common.h  configure.ac  coordinate.cpp  coordinate.h  main.cpp  server.cpp  server.h
src/web/htdocs/: style.css
src/web/htdocs/js/: defs.js  sysinfo.js  tracks.js
