#
#	Makefile.am
#
#	Copyright (c) 2020 by Christian Lorenz
#
#	====================================================================
#
#	This file is part of CWP-MockUp.
#	
#	listen2fritz is free software: you can redistribute it and/or modify
#	it under the terms of the GNU General Public License as published by
#	the Free Software Foundation, either version 3 of the License, or
#	(at your option) any later version.
#	
#	listen2fritz is distributed in the hope that it will be useful,
#	but WITHOUT ANY WARRANTY; without even the implied warranty of
#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#	GNU General Public License for more details.
#	
#	You should have received a copy of the GNU General Public License
#	along with listen2fritz.  If not, see <http://www.gnu.org/licenses/>.
#

bin_PROGRAMS=CWPMockUp

CWPMockUp_SOURCES=main.cpp server.cpp client.cpp common.cpp
